--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
       "homepage": "https://vinid.net",
       "role": "Developer"
     }
-  ]
+  ],
+  "require-dev": {
+    "phpunit/phpunit": "^9"
+  }
 }
