--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "vinid/lib-payment-integration",
+  "name": "oneid/integration",
   "type": "library",
-  "description": "Library support communicate with VinID payment platform",
-  "keywords": ["vinid","payment","php"],
+  "description": "Library to communicate with VinID platform",
+  "keywords": ["oneid", "vinid", "payment","php"],
   "homepage": "https://developers.vinid.net",
   "license": "MIT",
   "authors": [
@@ -15,5 +15,8 @@
   ],
   "require-dev": {
     "phpunit/phpunit": "^9"
+  },
+  "require": {
+    "ext-curl": "*"
   }
 }
