--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     }
   ],
   "require-dev": {
-    "phpunit/phpunit": "^9"
+    "phpunit/phpunit": "^9",
+    "phpunit/php-code-coverage": "^8.0"
   },
   "require": {
     "ext-curl": "*"
